Switch back to Ruby MRI. It's faster and we solve the timeouts in Docker